feat: add media-query for small page

--- a/novo/wp-content/themes/NTI-theme/style/footer.css
+++ b/novo/wp-content/themes/NTI-theme/style/footer.css
@@ -85,3 +85,9 @@ div#wrapper-footer-brasil {
   width: 100%;
   text-align: center;
 }
+
+@media only screen and (max-width: 768px) {
+  .footer-page-small {
+    position: relative;
+  }
+}
