--- a/novo/wp-content/themes/NTI-theme/style/style.css
+++ b/novo/wp-content/themes/NTI-theme/style/style.css
@@ -137,6 +137,15 @@ ol.olclasseinternas li {
   border-radius: 5px;
 }
 
+.card .btn {
+  background-color: #02672d;
+  color: white;
+}
+
+.card .btn:hover {
+  background-color: #59aa55;
+}
+
 a {
   color: #02672d;
   text-decoration: none;
@@ -359,7 +368,8 @@ a:hover {
 }
 
 .home .card > div.mais,
-.home a.text-right.mais {
+.home a.text-right.mais,
+.single-avisos .card > div.mais {
   padding-right: 1rem;
   padding-top: 1rem;
   position: absolute;
@@ -396,10 +406,6 @@ a:hover {
 }
 
 /* single pages */
-.single-avisos p {
-  margin: 1.5rem 0;
-}
-
 .single-avisos figure {
   padding: 1rem 0;
   display: flex;
@@ -409,7 +415,7 @@ a:hover {
   margin: 0;
 }
 
-.single-avisos img {
+.single-avisos figure img {
   width: 500px;
 }
 
@@ -417,6 +423,20 @@ a:hover {
   .single-avisos img {
     width: 100%;
   }
+}
+figure table tr td {
+  background-color: transparent;
+}
+
+figure.teletrabalho {
+  border: none !important;
+}
+
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 /* BETTERDOCS */
