--- a/novo/wp-content/themes/NTI-theme/style/style.css
+++ b/novo/wp-content/themes/NTI-theme/style/style.css
@@ -12,6 +12,10 @@ figure.figcenter {
   width: 50%;
 }
 
+#content {
+  min-height: calc(100vh - 294px);
+}
+
 .titulosecao {
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
@@ -52,6 +56,15 @@ table tr th {
   padding: 5px;
   border: 1px solid;
   text-align: left;
+}
+
+th {
+  background-color: #add8e6;
+  font-weight: 700;
+}
+
+tr:nth-of-type(2n) {
+  background-color: #f5f5f5;
 }
 
 p.ptextocentralizado {
@@ -422,9 +435,6 @@ a:hover {
   .single-avisos img {
     width: 100%;
   }
-}
-figure table tr td {
-  background-color: transparent;
 }
 
 figure.teletrabalho {
