--- a/novo/wp-content/themes/NTI-theme/style/dark-mode.css
+++ b/novo/wp-content/themes/NTI-theme/style/dark-mode.css
@@ -58,6 +58,10 @@
   color: #008712;
 }
 
+[data-theme="dark"] .betterdocs-credit p a {
+  color: #008712 !important;
+}
+
 [data-theme="dark"] #barra-brasil a,
 [data-theme="dark"] #portal-siteactions a {
   color: #fff !important;
@@ -239,7 +243,7 @@
 }
 
 [data-theme="dark"] .contratos table tr:last-child,
-[data-theme="dark"] .betterdocs tr:last-child {
+[data-theme="dark"] .betterdocs-entry-content table tr:last-child {
   background-color: #111;
 }
 
