change: change the computer and new repository

--- a/novo/wp-content/themes/NTI-theme/style/style.css
+++ b/novo/wp-content/themes/NTI-theme/style/style.css
@@ -389,8 +389,8 @@ a:hover {
   gap: 15px;
 }
 
-.home .card > div.mais,
-.home a.text-right.mais {
+.card > div.mais,
+a.text-right.mais {
   padding-right: 1rem;
   padding-top: 1rem;
   position: absolute;
